request-promise implemented

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-switch": "^3.3.4",
     "express": "^4.16.3",
     "npm": "^5.7.1",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
   }
 }
